--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"lucide-react": "^0.379.0",
 		"next": "14.2.3",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-aria": "^3.33.1",
+		"react-aria-components": "^1.2.1",
+		"react-dom": "^18",
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss-react-aria-components": "^1.1.3"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
