--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@react-aria/optimize-locales-plugin": "^1.1.1",
 		"lucide-react": "^0.379.0",
 		"next": "14.2.3",
 		"react": "^18",
